<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/guest_no_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="17sp"
            tools:ignore="MissingConstraints" />
        <TextView
            android:id="@+id/guest_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guest_name_guest_list"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/guest_no_text_view"
            app:layout_constraintTop_toBottomOf="@+id/guest_no_text_view" />

        <EditText
            android:id="@+id/guest_name_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/guest_name_guest_list_layout"
            android:layout_marginStart="20dp"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/guest_name_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guest_name_text_view"
            app:layout_constraintBottom_toBottomOf="@+id/guest_name_text_view"
            android:inputType="text"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/gender_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_guest_list_layout"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/guest_name_text_view"
            app:layout_constraintTop_toBottomOf="@id/guest_name_text_view" />

        <RadioGroup
            android:id="@+id/gender_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/guest_name_edit_text"
            app:layout_constraintTop_toTopOf="@id/gender_text_view"
            app:layout_constraintBottom_toBottomOf="@+id/gender_text_view">

            <RadioButton
                android:id="@+id/male_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/male_guest_list_layout" />

            <RadioButton
                android:id="@+id/female_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/female_guest_list_layout" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>