<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/check_in_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/check_in_date"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_text_view" />

            <DatePicker
                android:id="@+id/check_in_date_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/check_in_title_text_view"
                app:layout_constraintTop_toBottomOf="@id/check_in_title_text_view" />

            <TextView
                android:id="@+id/check_out_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/check_out_date"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/check_in_title_text_view"
                app:layout_constraintTop_toBottomOf="@+id/check_in_date_picker" />

            <DatePicker
                android:id="@+id/check_out_date_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/check_in_title_text_view"
                app:layout_constraintTop_toBottomOf="@id/check_out_title_text_view" />

            <TextView
                android:id="@+id/no_of_guest_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/no_of_guest"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/check_in_title_text_view"
                app:layout_constraintTop_toBottomOf="@+id/check_out_date_picker" />

            <EditText
                android:id="@+id/no_of_guest_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:inputType="numberSigned"
                android:minHeight="48dp"
                android:hint="@string/no_of_guest"
                app:layout_constraintBottom_toBottomOf="@+id/no_of_guest_text_view"
                app:layout_constraintStart_toEndOf="@+id/no_of_guest_text_view"
                app:layout_constraintTop_toTopOf="@+id/no_of_guest_text_view"
                android:autofillHints="" />

            <Button
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:layout_marginTop="20sp"
                app:layout_constraintStart_toStartOf="@+id/check_in_title_text_view"
                app:layout_constraintTop_toBottomOf="@+id/no_of_guest_text_view" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_marginStart="30sp"
                app:layout_constraintStart_toEndOf="@+id/search_button"
                app:layout_constraintTop_toTopOf="@+id/search_button"/>

            <Button
                android:id="@+id/restore_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restore"
                android:layout_marginStart="30sp"
                app:layout_constraintStart_toEndOf="@+id/save_button"
                app:layout_constraintTop_toTopOf="@+id/search_button"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>